app_config/core/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dde-agent-core-svc
  name: dde-agent-core
  namespace: geogpt-dev
spec:
  ports:
  - name: service-port
    port: 9486
    protocol: TCP
    targetPort: 9486
  selector:
    app: dde-agent-core
  sessionAffinity: None
